# Rliblwgeom

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: RcppExports.R
liblwgeom/: Makefile.in  configure  configure.ac  liblwgeom_internal.h  liblwgeom_topo_internal.h  lwgeom_api.c  lwgeom_geos_split.c  lwgeom_topo.c  lwgeom_transform.c  lwgeom_wrapx.c  lwin_encoded_polyline.c  lwin_geojson.c  lwin_wkb.c  lwpoint.c  lwutil.c  postgis_config_stub.h  postgis_svn_revision.h  ptarray.c
liblwgeom/cunit/: cu_tester.c
src/: Makevars.win  RcppExports.cpp  liblwgeom.cpp
tools/: build_patch  prepare
